{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Player",
            "id": "51d781ac-f9ef-4a32-804c-1f0e7d7e4874",
            "actions": [
                {
                    "name": "MovePlus",
                    "type": "Button",
                    "id": "8212ed20-c50f-4150-8b06-e9d83f5fd020",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveDiagonal",
                    "type": "Button",
                    "id": "bc036ec8-e236-419a-a26c-d074f1024f40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c88c9843-fadf-40e4-8389-7aa47186be9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "Numpad",
                    "id": "5b3991c1-e10d-4fea-b701-977c25c1de90",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlus",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d78846ce-8787-463d-b993-3d3b6aabd282",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3b862434-6f2d-47fa-a702-cfe45c65a7ac",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a271b166-7c98-44d9-a04d-f1526cb07f1f",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f6e7d06d-b456-44ff-9906-92f9dfb40e47",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "dd8ccc61-a0e6-4565-b21a-e6da15cef57d",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlus",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "239ede6a-b2bd-47c3-abc7-356532564968",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fc317c55-d1b8-4147-99b0-4c8b4fde1fa8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d66f8493-2b7d-4887-93c9-056266665308",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f4757cc4-83e4-4684-ad55-b5b0752c43b3",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovePlus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "57df5be7-5f07-47f1-b7ce-18ba927d2d3f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0319d4a5-6e0a-457e-9b22-0d34f990ed23",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fac36b3c-96e7-4b17-a578-cbaab4d6eb60",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "NumpadDiagonal",
                    "id": "568735f3-ad10-4954-8d40-85ea661b695c",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveDiagonal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4a8e9b8b-63ba-449b-8e81-7a31badd6573",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveDiagonal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff85c2ed-2203-43ed-8749-7f63ad8f9b96",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveDiagonal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "21c9cce2-a80d-4460-9af6-a9dbd30d8960",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveDiagonal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3f275e11-bbac-4400-addb-5158aacbaf4d",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveDiagonal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "d85f03dd-85d6-4487-a59d-528225732e49",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "0bf2aa27-ff80-4bdf-a3fb-439ec30d9fca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Accept",
                    "type": "Button",
                    "id": "0a4ff329-19d9-4c14-9bee-9c57243d49e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48611872-03bb-4a82-a795-1176a3a86845",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Accept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f014b48-1c1d-4a5c-a5cc-c81d9d79f5e1",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Accept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "787f3671-3bca-4661-b89b-10e8f3e7b7a4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Accept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Numpad",
                    "id": "b395dbb4-8801-410f-9382-047daf5bcf22",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "01bb5fbd-6fba-4616-a541-3360fef1d03a",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bb2fee2a-9433-4fe8-b157-a2bdc9282cb2",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "097d9ac7-3b02-4317-91a8-554bf51e2cb5",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "05bda90e-3dc6-4059-b840-818841ffa846",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "f4e5162b-76cb-402b-af91-f65d1cc58471",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3b2355df-b7c7-4cdf-93ed-e6e7a1b21b18",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d27f0713-4a47-458a-afcd-98241a662aee",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e912cea-daef-41fd-ae5d-61deb08abae6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "24d55abf-2cae-4747-aaf4-3102dc451ab5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Debug",
            "id": "e4b64747-45b7-41fb-9b11-a8d24e25c0c6",
            "actions": [
                {
                    "name": "RegenerateDungeon",
                    "type": "Button",
                    "id": "12918ba3-1121-4a7a-a708-07aea74600d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52ca6980-ec7e-4f4f-98bb-d688818170d4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "RegenerateDungeon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}